# logit-estimation

./: README.md  compare_asst_repeat.py  estimate.py  launch.sub  launch_jobs.sh  launch_prec_jobs.sh  logit_diffs.py  openai_completion.py  pyproject.toml  run_estimation.py  run_gpt_estimation.py  test.py
logit-estimation/: compare_asst_repeat.py  estimate.py  estimators.py  logit_diffs.py  openai_completion.py
logit_estimation/: estimate.py  estimators.py
outputs/: preds_refs_diff_6.txt  preds_refs_gt.txt  preds_refs_mc.txt
saved_logits-1000/: 0-diff-36966-eps1e-08.npy  0-diff-36991.npy  0-mc-36966.npy  0-mc-36991.npy  1-diff-35377-eps1e-08.npy  1-mc-35377.npy  15-diff-35663-eps1e-08.npy  15-mc-35663.npy  3-diff-34797-eps1e-08.npy  3-mc-34797.npy  4-diff-35507-eps1e-08.npy  4-mc-35507.npy  5-diff-36511-eps1e-08.npy  5-mc-36511.npy  5-true.npy  6-diff-35672-eps1e-08.npy  6-mc-35672.npy
saved_logits-16000/: 0-diff-607866-eps1e-08.npy  0-mc-607866.npy  1-diff-607398-eps1e-08.npy  1-mc-607398.npy  10-diff-606049.npy  10-mc-606049.npy  11-diff-607538.npy  11-mc-607538.npy  11-true.npy  12-diff-607602.npy  12-mc-607602.npy  13-diff-604835.npy  13-mc-604835.npy  14-diff-609410.npy  14-mc-609410.npy  15-diff-606974.npy  15-mc-606974.npy  16-diff-609436.npy  16-mc-609436.npy  17-diff-609558.npy  17-mc-609558.npy  18-diff-609192.npy  18-mc-609192.npy  19-diff-609799.npy  19-mc-609799.npy  2-diff-607104-eps1e-08.npy  2-mc-607104.npy  20-diff-607922.npy  20-mc-607922.npy  21-diff-597653.npy  21-mc-597653.npy  22-diff-609395.npy  22-mc-609395.npy  23-diff-603296.npy  (+86 more)
(+4938 files in other folders)
